changed header z-index to prevent projects to overlap

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,7 @@ header {
     width: 100%;
     height: 100px;
     position: fixed;
+    z-index: 999 !important;
 }
 
 /* Navigation Styles */
